Added: Edit profile feature (#76)
* feat: Edit profile

* Refactor: Update profile and header links

Update the profile link in the base.html file to point to the 'edit_profile' URL with the username parameter. Also, update the header.html file to change the 'Change Email' link to 'Account' and add a new link to the user's profile page.

* chore: Remove unused code

* feat: Add avatar + link to profile to comment, render display name

* refactor: Add min height to profile

--- a/src/brazil_blog/static/css/brazil_blog_compiled.css
+++ b/src/brazil_blog/static/css/brazil_blog_compiled.css
@@ -1413,9 +1413,18 @@ select {
   z-index: 10;
 }
 
+.float-left {
+  float: left;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .-ml-1 {
@@ -1476,6 +1485,14 @@ select {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .line-clamp-2 {
@@ -1549,6 +1566,10 @@ select {
   height: 4rem;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -1573,6 +1594,22 @@ select {
   min-height: 100vh;
 }
 
+.min-h-24 {
+  min-height: 6rem;
+}
+
+.min-h-64 {
+  min-height: 16rem;
+}
+
+.min-h-96 {
+  min-height: 24rem;
+}
+
+.min-h-48 {
+  min-height: 12rem;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -1591,6 +1628,10 @@ select {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-3 {
@@ -1878,6 +1919,16 @@ select {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
+.bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -2063,6 +2114,10 @@ select {
 
 .italic {
   font-style: italic;
+}
+
+.not-italic {
+  font-style: normal;
 }
 
 .text-black {
@@ -2255,6 +2310,11 @@ select {
 .hover\:bg-slate-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#bbb\]:hover {
