feat: Plot blog post locations on map with connecting lines

--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -6,6 +6,7 @@
 <div class="bg-green-700 py-8 flex-grow">
     {% include "blog/includes/filter-bar.html" %}
     {% include "blog/includes/blogpost-grid.html" with blogposts=blogpages only %}
+    {% include "blog/includes/blog-route-map.html" with blog_posts=blogpages %}
     {% include "blog/includes/tukanchamon.html" %}
 </div>
 
