--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -2,13 +2,13 @@
 {% load i18n static wagtailcore_tags wagtailimages_tags custom_image_tags user_tags %}
 {% block body_class %}template-blogindexpage{% endblock %}
 {% block content %}
-{% include "blog/includes/timeline.html" with grouped_blog_posts=grouped_blog_posts %}
+{% include "blog/includes/timeline.html" with grouped_blog_posts=grouped_blog_posts itinerary=itinerary %}
 
 <div class="bg-green-700 py-8 flex-grow">
     {% include "blog/includes/filter-bar.html" %}
     {% include "blog/includes/blogpost-grid.html" with blogposts=blogpages only %}
     <div class="container mx-auto mt-8">
-        {% include "blog/includes/blog-route-map.html" with blog_posts=blogpages %}
+        {% include "blog/includes/blog-route-map.html" with blog_posts=blogpages itinerary=itinerary %}
     </div>
     {% include "blog/includes/tukanchamon.html" %}
 </div>
