Refactor: Add transition-colors class to comments styling
Add the "transition-colors" class to the comments styling in the comments.html file. This class will enable smooth color transitions for the comments section.

Refactor: Update notification creation logic

Update the logic for creating notifications in the CommentViewSet class. The changes include determining the parent comment, setting the user to notify based on the parent comment, and customizing the title and message based on whether it is a new comment or a reply. This will improve the accuracy and clarity of the notifications.

Refactor: Update CSS classes in brazil_blog_compiled.css

Update the CSS classes in the brazil_blog_compiled.css file. This includes adding the "p-0" class for zero padding and updating the "text-slate-700" and "text-slate-500" classes for consistent text color. These changes will enhance the styling and readability of the blog.

Refactor: Update notifications styling in notifications.html

Update the styling of the notifications section in the notifications.html file. This includes changing the border radius to rounded-3xl and increasing the z-index to ensure proper layering. These changes will improve the visual appearance and user experience of the notifications.

Refactor: Add mark all as read functionality

Add the functionality to mark all notifications as read in the markAllAsRead function in the notifications.html file. This will allow users to easily mark all notifications as read with a single click.

Refactor: Add mark all as read API endpoint

Add the mark_all_as_read API endpoint in the NotificationViewSet class. This endpoint allows users to mark all notifications as read by sending a POST request. This will provide a convenient way for users to manage their notifications.

Refactor: Update mark_as_read API endpoint

Update the mark_as_read API endpoint in the NotificationViewSet class. This endpoint now accepts a POST request and updates the read status of a specif

--- a/src/blog/templates/blog/includes/comments.html
+++ b/src/blog/templates/blog/includes/comments.html
@@ -90,6 +90,7 @@
             "rounded-lg",
             "mt-4",
             "relative",
+            "transition-colors",
         );
 
         // if the comment has a parent, indent it + the indentation of the parent
