--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
                     <div class="flex items-end justify-between gap-4">
-                        <div class="flex-col w-4/5">
+                        <div class="flex-col flex-1">
                             <h1 class="header-text-color flex-wrap font-bold text-xl md:text-4xl mb-0 line-clamp-3">{{ page.title }}</h1>
                             <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
                             <div id="like-section" class="flex items-center space-x-2 pr-2 mt-2">
