Refactor: Update timeline stop name styling and add ellipsis for long names

--- a/src/blog/templates/blog/includes/timeline.html
+++ b/src/blog/templates/blog/includes/timeline.html
@@ -8,7 +8,7 @@
                     <div 
                         id="stop-{{ stop.id }}"
                         data-stop
-                        class="h-full flex flex-row items-center bg-yellow-600 justify-center cursor-pointer z-20 relative"
+                        class="h-full flex flex-row items-center bg-yellow-600 justify-center cursor-pointer z-20 relative px-0.5"
                         data-start-date="{{ stop.start_date }}"
                         data-end-date="{{ stop.end_date }}"
                         title="{{ stop.name }} - {{ stop.start_date }} - {{ stop.end_date }}"
